# collector_core

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml  tmp.py
collector_core/: __init__.py  adapter.py  collector.py  data-template.yml  errors.py
tests/: test_errors.py  test_flush.py  test_remote_access.py  test_report_error.py
